--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -183,13 +183,13 @@
       alt="" width="50" height="50">
     <h1>Google Play</h1>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="/games.html">
+    <a href="/games">
       <h3>Games</h3>
     </a> &nbsp; &nbsp;
     <a href="/apps">
       <h3>Apps</h3>
     </a> &nbsp; &nbsp;
-    <a href="http://127.0.0.1:8000/views/movies.html">
+    <a href="/movies">
       <h3>Movies</h3>
     </a> &nbsp; &nbsp;
     <a href="">
